--- a/index.html
+++ b/index.html
@@ -89,7 +89,14 @@
 </div></div>
                 <div class="col-md-9" role="main">
 
-<h1 id="_1">中华经典古籍合集</h1></div>
+<h1 id="_1">中华经典古籍合集</h1>
+<p>阅读经典，体验中华经典古籍和文化！我们已经更新了：
+山海经，菜根谭，镜花缘，道德经，中庸，大学，尚书，论语，古文观止，喻世明言，孙子兵法，东周列国志，孝经，桃花扇，洛神赋，金石缘，封神演义，儒林外史。
+读者可以根据需要自由调节字体大小和背景图片。</p>
+<hr />
+<p>閱讀經典，體驗中華經典古籍和文化！我們更新了：
+山海經，菜根譚，鏡花緣，道德經，中庸，大學，尚書, 論語，古文觀止，喻世明言，孫子兵法，東周列國志，孝經，桃花扇，洛神賦，金石緣，封神演義，儒林外史。
+讀者可以根據需要自由調節字體大小和背景圖片。</p></div>
         </div>
 
         <footer class="col-md-12">
@@ -172,5 +179,5 @@
 
 <!--
 MkDocs version : 1.0.4
-Build Date UTC : 2020-08-30 01:10:01
+Build Date UTC : 2021-01-27 12:47:01
 -->
